--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -21,11 +21,64 @@ h1, h2, h3, h4, h5, h6 {
 p, div {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
+
+input[type="text"] {
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  font-weight: 300;
+  color: #888888;
+  padding: 0 10px;
+}
+
 .book-info {
-
+  margin-top: 24px;
   h3 {
+    font-size:16px;
+    text-transform:capitalize;
+    font-weight: bold;
+    font-style: italic;
+  }
+  p {
+    color:#7a7a7a;
+    margin:8px 0;
+  }
+}
+.action-links {
+  margin-bottom:6px;
+  h2 {
     font-size:18px;
+  }
+}
+.action-button {
+  background: rgba(76,136,57,.5);
+  padding:9px;
+  color:#ffffff;
+  text-decoration: none;
+  display:inline-block;
+  font-size: 12px;
+  margin:6px 0;
+  border: none;
+  &:hover {
+    background: rgba(76,136,57,.6);
+  }
+  &:active {
+    background: rgba(76,136,57,.8);
+  }
+}
 
+.admin-button {
+  border:1px solid rgba(76,136,57,.6);
+  padding:18px;
+  color:rgba(76,136,57,.8);
+  text-decoration: none;
+  display:inline-block;
+  margin:24px 0;
+  &:hover {
+    background: rgba(76,136,57,.1);
+  }
+  &:active {
+    background: rgba(76,136,57,.2);
   }
 }
 
@@ -54,6 +107,19 @@ p, div {
   }
 }
 
+form {
+  p {
+    margin:6px 0;
+    label {
+      margin:6px 0;
+      line-height: 1.6;
+    }
+  }
+  button {
+
+  }
+}
+
 #board-buttons {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -61,17 +127,31 @@ p, div {
   display:flex;
   justify-content: space-between;
 }
-
+.games-list-header {
+  margin:24px 0 8px;
+  font-size: 18px;
+}
+.pgn-wrapper {
+  display:flex;
+  justify-content: space-between;
+  input {
+    margin:12px;
+  }
+  p {
+    margin-bottom: 12px;
+    color: #6e6e6e;
+  }
+}
 #board-buttons button {
   position: relative;
   float: left;
   width: 24%;
-  height: 22vw;
   border:1px solid #4c8839;
   background-color:transparent;
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto 35%;
+  min-height: 90px;
   cursor: pointer;
   &:focus {
     background-color:rgba(76,136,57,.1);
@@ -115,6 +195,8 @@ p, div {
 
 .content {
   padding:10px;
+  max-width: 420px;
+  margin:auto;
 }
 
 .game-picker {
@@ -169,8 +251,14 @@ p, div {
   }
 }
 
+.keyboard-shortcuts {
+  dt {
+    float:left;
+  }
+}
 
 h1 {
   font-size: 30px;
   margin:10px 0 20px 0;
+  text-transform: capitalize;
 }
