--- a/app/views/books/edit.html.haml
+++ b/app/views/books/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 edit book
+%h1 Edit book
 
 = render 'form'
 
-= link_to 'Back', books_path
+= link_to 'Back to Books Directory', books_path, :class => 'admin-button'
+= link_to 'Matches Directory', matches_path, :class => 'admin-button'
