--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -1,5 +1,6 @@
-%h1 new book
+%h1 New Book
 
 = render 'form'
 
-= link_to 'Back', books_path
+= link_to 'Books Directory', books_path, :class => 'admin-button'
+= link_to 'Matches Directory', matches_path, :class => 'admin-button'
