--- a/app/views/matches/_form.html.haml
+++ b/app/views/matches/_form.html.haml
@@ -1,3 +1,4 @@
+
 = form_for(@match) do |f|
 
   - if @match.errors.any?
@@ -15,10 +16,11 @@
     %br/
     = f.text_area :pgn
 
-  %p
-    = f.submit
 
   - for book in Book.all
     = check_box_tag 'match[book_ids][]', book.id, @match.books.include?(book)
     = book.title
     %br
+
+  %p
+    = f.submit :class => 'action-button'
