--- a/app/views/matches/edit.html.haml
+++ b/app/views/matches/edit.html.haml
@@ -2,4 +2,5 @@
 
 = render 'form'
 
-= link_to 'Back', matches_path
+= link_to 'Matches Directory', matches_path, :class => 'admin-button'
+= link_to 'Books Directory', books_path, :class => 'admin-button'
