--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,11 +1,17 @@
+%h1 Matches
+
 - @matches.each do |match|
-  = match.pgn
-  = link_to 'Show', match_path(match)
-  = link_to 'Edit', edit_match_path(match)
-  = link_to 'Destroy', match_path(match),
-    method: :delete,
-    data: { confirm: 'Are you sure?' }
-  %br
+  = match.pgn.truncate(130)
+  .action-links
+    = link_to 'Show', match_path(match), :class => 'action-button'
+    = link_to 'Edit', edit_match_path(match), :class => 'action-button'
+    = link_to 'Destroy', match_path(match),
+      method: :delete,
+      :class => 'action-button',
+      data: { confirm: 'Are you sure?' }
+    %br
 
 
-= link_to 'New Match', new_match_path
+= link_to 'New Match', new_match_path, :class => 'admin-button'
+= link_to 'Matches Directory', matches_path, :class => 'admin-button'
+= link_to 'Books Directory', books_path, :class => 'admin-button'
