--- a/app/views/matches/new.html.haml
+++ b/app/views/matches/new.html.haml
@@ -1,5 +1,6 @@
-%h1 new match
+%h1 New Match
 
 = render 'form'
 
-= link_to 'Back', matches_path
+= link_to 'Matches Directory', matches_path, :class => 'admin-button'
+= link_to 'Books Directory', books_path, :class => 'admin-button'
